...
                                    <action selector="ingredient2Pressed:" destination="qIz-6t-7E5" eventType="touchUpInside" id="oES-u8-xdF"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" restorationIdentifier="searchTerm" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="type an ingredient" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s5V-uF-sQ8" customClass="SearchTextField" customModule="SearchTextField">
                                <rect key="frame" x="126" y="305" width="121" height="17"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="searchTextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="addPressed:" destination="qIz-6t-7E5" eventType="primaryActionTriggered" id="Eif-D1-Ssk"/>
                                    <action selector="editPressed:" destination="qIz-6t-7E5" eventType="editingDidBegin" id="Chd-iz-dYL"/>
                                </connections>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ci-RB-015">
                                <rect key="frame" x="40" y="415" width="295" height="50"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="Search"/>
                                <state key="normal" image="BigButton.png"/>
                                <connections>
                                    <action selector="searchPressed:" destination="qIz-6t-7E5" eventType="touchUpInside" id="dSf-ye-8FW"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MixMakersLogo1" translatesAutoresizingMaskIntoConstraints="NO" id="IE4-Rw-Rkv">
                                <rect key="frame" x="91" y="30" width="193" height="252"/>
                            </imageView>
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bxD-jI-UPv">
                                <rect key="frame" x="262" y="300" width="22" height="22"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="addButton"/>
                                <connections>
                                    <action selector="addPressed:" destination="qIz-6t-7E5" eventType="touchUpInside" id="KhH-Hu-KiW"/>
                                </connections>
                            </button>
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ueg-4G-Jgs">
                                <rect key="frame" x="257" y="347" width="109" height="23"/>
...
