...
                    }
                    else {
                        strongSelf.nvActivityIndicatorView.stopAnimating()
                        strongSelf.manyCocktails.append(loadedCocktails)
                        strongSelf.finalCocktails = (self?.combineSearch.combine(with: (strongSelf.manyCocktails)))!
                        if (strongSelf.finalCocktails.isEmpty) {
                            strongSelf.loadingLabel.text = "Cocktails not found"
                        }
                        else {
                            let results = strongSelf.finalCocktails
                            strongSelf.tableView.isHidden = false
                            strongSelf.loadingContainerView.isHidden = true
                            strongSelf.update(with: results)
...
